Added privacy policy folder

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
         <!-- Favicon and touch icons -->
         <link rel="shortcut icon" href="assets/ico/favicon.png">
+
         <!-- <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
@@ -148,6 +149,12 @@
 	                		<div class="col-md-8">
 	                    		<h3>Naam Jap Tracker</h3>
 	                    		<p>App is used to track the naam jap males by setting the targets and updating the mala count on daily basis. It provides dashboard view to see the backlog or extra mala done vis a vis targets committed.</p>
+
+                                
+                                <!-- <a href='https://play.google.com/store/apps/details?id=com.hbajaj.bhajansangrah' style="display: inline-block; overflow: hidden; border-radius: 3px; width: 100px;height: 33px; "><img alt='Get it on Google Play' src='assets/img/google-play-badge_new.png' style="border-radius: 3px; width: 100px;height: 33px; "/></a> -->
+                                <a href="https://apps.apple.com/us/app/naam-jap-tracker/id6473683040" style="display: inline-block; overflow: hidden; border-radius: 3px; width: 100px; height: 33px;"><img src="assets/img/apple-badge.png" alt="Download on the App Store" style="border-radius: 3px; width: 100px; height: 33px;"></a>
+
+
 	                    	</div>
 	                    </div>
                     </div>
