Added play store link for naam jap tracker

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 	                    		<p>App is used to track the naam jap males by setting the targets and updating the mala count on daily basis. It provides dashboard view to see the backlog or extra mala done vis a vis targets committed.</p>
 
                                 
-                                <!-- <a href='https://play.google.com/store/apps/details?id=com.hbajaj.bhajansangrah' style="display: inline-block; overflow: hidden; border-radius: 3px; width: 100px;height: 33px; "><img alt='Get it on Google Play' src='assets/img/google-play-badge_new.png' style="border-radius: 3px; width: 100px;height: 33px; "/></a> -->
+                                <a href='https://play.google.com/store/apps/details?id=com.hbajaj.naam_jap_tracker' style="display: inline-block; overflow: hidden; border-radius: 3px; width: 100px;height: 33px; "><img alt='Get it on Google Play' src='assets/img/google-play-badge_new.png' style="border-radius: 3px; width: 100px;height: 33px; "/></a>
                                 <a href="https://apps.apple.com/us/app/naam-jap-tracker/id6473683040" style="display: inline-block; overflow: hidden; border-radius: 3px; width: 100px; height: 33px;"><img src="assets/img/apple-badge.png" alt="Download on the App Store" style="border-radius: 3px; width: 100px; height: 33px;"></a>
 
 
